--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div id="social-links">
             <a href="https://github.com/sidneihenrique" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
             <a href="https://instagram.com/sidneiihenrique" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
-            <a href="https://linkedin.com/in/sidneihenrique" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
-            <a href="https://github.com/sidneihenrique" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
+            <a href="https://www.linkedin.com/in/sidnei-henrique-reis-dos-santos-15226a217/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+            <a href="https://wa.me/+554198413481" target="_blank"><ion-icon name="logo-whatsapp"></ion-icon></a>
         </div>
 
         <footer>
