ul links fixed with coherent links

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         </div>
 
         <ul>
-            <li> <a href="#" target="_blank">Inscrever-se no NLW</a> </li>
-            <li> <a href="#">Ver meu portfolio</a> </li>
-            <li> <a href="#">LinkedIn</a> </li>
-            <li> <a href="#">GitHub</a> </li>
+            <li> <a href="https://sidneihenrique.github.io/portfolio/" target="_blank">Veja meu Portfolio profissional</a> </li>
+            <li> <a href="./assets/Curriculo-Sidnei-Henrique-Reis-dos-Santos.pdf">Baixe meu currículo</a> </li>
+            <li> <a href="https://www.linkedin.com/in/sidnei-henrique-reis-dos-santos-15226a217/">Visite meu LinkedIn</a> </li>
+            <li> <a href="https://github.com/sidneihenrique">Conheça meu GitHub</a> </li>
         </ul>
 
         <div id="social-links">
