--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div id="social-links">
             <a href="https://github.com/sidneihenrique" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
-            <a href="https://instagram.com/sidneiihenrique" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+            <a href="#" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
             <a href="https://www.linkedin.com/in/sidnei-henrique-reis-dos-santos-15226a217/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
             <a href="https://wa.me/+554198413481" target="_blank"><ion-icon name="logo-whatsapp"></ion-icon></a>
         </div>
